backend/eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: talebound-api-deployment
  labels:
    app: talebound-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: talebound-api
  template:
    metadata:
      labels:
        app: talebound-api
    spec:
      containers:
      - name: talebound-api
        image: 871098816149.dkr.ecr.eu-central-1.amazonaws.com/talebound-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
