backend/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: talebound-api-service
spec:
  selector:
    app: talebound-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
