backend/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talebound-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "api.talebound.net"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: talebound-api-service
                port:
                  number: 80
  tls:
    - hosts:
      - api.talebound.net
      secretName: talebound-api-cert
